--- a/authentication-service/src/main/resources/application.properties
+++ b/authentication-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 # MySQL DataSource
-spring.datasource.url=jdbc:mysql://localhost:3307/shopshoe2?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/cartshopshoes?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
