--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 # MySQL DataSource - Matches the database from the SQL file
-spring.datasource.url=jdbc:mysql://localhost:3306/cart-service?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/cartservice?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
